# llm-eval-harness

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/api/: main.py
src/api/routers/: evals.py  health.py
src/core/: config.py  database.py  logging.py
src/evaluation/: dataset_registry.py  orchestrator.py  runner.py
src/evaluation/adversarial/: red_team.py
src/evaluation/judge/: llm_judge.py
src/evaluation/scorers/: metrics.py
src/monitoring/: regression.py  tracker.py
tests/integration/: test_eval_harness.py
