[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-eval-harness"
version = "1.0.0"
description = "Production-grade LLM evaluation framework with adversarial red-teaming"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlmodel>=0.0.21",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "openai>=1.45.0",
    "anthropic>=0.34.0",
    "langsmith>=0.1.100",
    "mlflow>=2.16.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "datasets>=3.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
[tool.hatch.build.targets.wheel]
packages = ["src"]


